// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link> renders 1`] = `
<Text
  accessibilityRole="link"
  href="http://minube.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
/>
`;

exports[`<Link> when {style} 1`] = `
<Text
  accessibilityRole="link"
  href="http://minube.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {
        "fontSize": 20,
        "fontWeight": "700",
      },
    ]
  }
  visible={true}
/>
`;

exports[`<Link> when {styleHover} 1`] = `
<Text
  accessibilityRole="link"
  href="http://minube.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#191919",
        "fontFamily": undefined,
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 12.8,
        "lineHeight": 15.36,
      },
      false,
      Object {},
    ]
  }
  styleHover={
    Object {
      "fontSize": 20,
      "fontWeight": "700",
    }
  }
  visible={true}
/>
`;
